[package]
name = "api"
version = "0.1.0"
authors = ["Lily Lin <rctcwyvrn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.1"
parking_lot = "0.11.1"
serde = { version = "1.0.125", features = ["derive"] }
tokio = { version = "1.4.0", features = ["full"] }
crossbeam-channel = "0.5.0"
rexpect = "0.4"
anyhow = "1.0.40"
urlencoding = "1.1.1"
log = "0.4"
pretty_env_logger = "0.4.0"
rustyline = "8.0.0"